fix progress bar not dragging on mobile

--- a/app/assets/stylesheets/discover.scss
+++ b/app/assets/stylesheets/discover.scss
@@ -192,6 +192,7 @@
     &:before {
         color: #1DB954 !important;
         opacity: 1 !important;
+        line-height: 35px !important;
     }
 
     &:hover {
